sysutils/gtime: add new port
The Free Software Foundation's "time" utility.

This utility exists in the FreeBSD base collection, but the GNU
version has added or incompatible functionality that is sometimes
useful.

Note that this port will install this utility with a `g' prefix,
for example gtime, but the texinfo documentation will refer to these
utilities without the `g' prefix.

WWW: https://www.gnu.org/software/time

--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -456,6 +456,7 @@
     SUBDIR += gstreamer-plugins-cdio
     SUBDIR += gstreamer-plugins-hal
     SUBDIR += gstreamer1-plugins-cdio
+    SUBDIR += gtime
     SUBDIR += gtk-imonc
     SUBDIR += hachoir-metadata
     SUBDIR += hachoir-subfile
