--- a/devel/Makefile
+++ b/devel/Makefile
@@ -134,6 +134,9 @@
     SUBDIR += api-sanity-autotest
     SUBDIR += apitrace
     SUBDIR += appmenu-gtk-module
+    SUBDIR += appmenu-gtk-module-common
+    SUBDIR += appmenu-gtk-module-gtk2
+    SUBDIR += appmenu-gtk-module-gtk3
     SUBDIR += appstream-glib
     SUBDIR += apr1
     SUBDIR += apr2
