sysutils/diskmonitor: new port, but not of much use until bsdisks supports SMART monitoring

--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -247,6 +247,7 @@
     SUBDIR += dirvish
     SUBDIR += diskcheckd
     SUBDIR += diskimage-tools
+    SUBDIR += diskmonitor
     SUBDIR += diskscrub
     SUBDIR += disktool
     SUBDIR += disktype
